...
            return "Dashboard"
        case .calendar:
            return "Calendar"
        case .schoolRun:
            return "Run"
        case .homeLife:
            return "HomeLife"
        case .tasks:
            return "Tasks"
        }
    }
    
    /// Icon name for inactive state
...
